# skytrace-ml-tracker

./: .gitignore  MEMORY.md
build-detector-linux/: Dockerfile
iq-stream-consumer/: iq-stream-consumer.py
iq-stream-consumer-detector-dropin-v0.1.6/: README.md  TRACKING_OVER_KAFKA.md
iq-stream-consumer-detector-dropin-v0.1.7/: README.md  iq-stream-consumer.py
iq-stream-consumer-detector-dropin-v0.1.8/: README.md
iq-stream-consumer-detector-dropin-v0.1.9/: README.md  iq-stream-consumer.py
iq-stream-consumer-detector-dropin-v0.2.0/: Dockerfile.snippet  README.md  iq-stream-consumer.py  ngva_adapter.py
iq-stream-consumer-detector-dropin-v0.2.1/: README.md  iq-stream-consumer.py
iq-stream-consumer-detector-dropin-v0.2.2/: README.md
iq-stream-consumer-detector-dropin-v0.2.3/: README.md  TRACKING_OVER_KAFKA.md  dechirp_tools.py  iq-stream-consumer.py
memory/: 2026-03-15.md
omnipotent-airsim-installer/: Cargo.toml
omnipotent-airsim-installer/scripts/: package_deb.sh
omnipotent-airsim-installer/src/: main.rs
skytrace-ml-tracker/: README.md  TASK.md  pyproject.toml
skytrace-ml-tracker/scripts/: build_train_npz.py  eval_centerbw_folder.py  eval_gt_cheat.py  eval_skytracert_poc_folder.py  infer_centerbw.py  train_centerbw.py
skytrace-ml-tracker/skytrace_ml_tracker/: eval.py  features.py  io_sigmf.py  metrics.py  model_centerbw.py  proposals.py  sigmf_gt.py
skytrace-ml-tracker/tests/: test_eval.py  test_features.py
tmp_result_016/: eval_presets.py  preset_eval.tsv
